Fixed sound for Taito Sure Shot (sounds awful, but like the real thing :)) and Mr. Black (Z-80 version still misses sound rom dumps though) (NMI line needs to be pulsed for these games)
Made speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
Fixed COP420 emulation, sound works now on Zira
Add emulation pause support for alternate sound

*** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren, barakandl
New:
MAC: MAC Jungle
Stern: S.A.M. System Flash Boot 1.02,1.06,2.10,2.3,3.1
       World Poker Tour 1.03(English),1.05(English),1.06(English,French,German,Italian,Spanish),1.08(English,French,German,Italian,Spanish),1.09(English,French,German,Italian,Spanish),1.09-2(French),
                        1.11(English,[English,French],[English,Italian],[English,Spanish],French,German,[German,French],Italian,Spanish)
                        1.12(English,[English,French],[English,Italian],[English,Spanish],French,German,[German,French],Italian,Spanish)
                        14.0(English,[English,French],[English,Italian],[English,Spanish],French,German,[German,French],Italian,Spanish)
       Simpsons Kooky Carnival (Redemption) 0.90 New Jersey,1.03,1.05,2.0
       Pirates of the Caribbean 1.08([English,Spanish]),1.09([English,French],[English,Italian],[English,Spanish],[German,French],
                                1.10([English,French],[English,Italian],[German,French]),1.11([English,Spanish]),
                                1.13([English,French],[English,Italian],[English,Spanish],[German,French]),
                                1.15([English,French],[English,Italian],[English,Spanish],[German,French]),
                                3.00([English,French],[English,Italian],[English,Spanish],[German,French]),
                                4.00([English,French],[English,Italian],[English,Spanish],[German,French]),